# tts_utils

./: .envdefault  .gitignore  README.md  config.py  pyproject.toml
scripts/: phonemizer.py  text_to_csv.py  utils.py
